# h3_dart

./: .gitignore  .native-extensions  README.md  download_deps.sh  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml
cpp/: CMakeLists.txt
example/: example.dart
example/h3_ffi_flutter_example/: .native-extensions  LICENSE  README.md  pubspec.yaml
example/h3_ffi_flutter_example/android/: settings.gradle
example/h3_ffi_flutter_example/android/app/: build.gradle
example/h3_ffi_flutter_example/android/app/src/main/kotlin/com/example/h3_ffi_flutter_example/: MainActivity.kt
example/h3_ffi_flutter_example/android/gradle/wrapper/: gradle-wrapper.properties
example/h3_ffi_flutter_example/ios/: Podfile
example/h3_ffi_flutter_example/ios/Runner/: Info.plist
example/h3_ffi_flutter_example/ios/Runner.xcodeproj/: project.pbxproj
example/h3_ffi_flutter_example/lib/: main.dart
ios/: CMakeLists.txt  Podfile  dart_shim.cc  dart_shim.cpp  dart_shim.h  h3.podspec  h3_ffi.podspec  h3lib
lib/: h3_ffi.dart  main.dart  test.dart
lib/src/: errors.dart  h3_ffi.dart  types.dart
lib/src/bindings/: bindings.dart  signatures.dart  types.dart
lib/src/ffi/: arena.dart  dylib_utils.dart
test/: h3.dart
